<resources>
    <string name="app_name">myCalculator</string>
    <string name="btn_backspace"><![CDATA[<--]]></string>
    <string name="btn_Square">\u221a</string>
    <string name="btn_Div">/</string>
    <string name="btn_clear">C</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_multi">*</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_subtraction">-</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_add">+</string>
    <string name="btn_0">0</string>
    <string name="btn_DOT">.</string>
    <string name="btn_PlMin">+/-</string>
    <string name="btn_result">=</string>
</resources>
